# CodeWalkers

./: .codewalkers.env.example  .gitignore  CodeWalkers_Manual.md  LICENSE  README.md  README_zh.md  eslint.config.js  implementation_log.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pr-description.md  tailwind.config.js  test-report.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
coverage/: index.html
coverage/components/: SessionPanel.tsx.html  index.html
coverage/components/ui/: index.html  select.tsx.html
coverage/hooks/: index.html  useAppConfig.ts.html
coverage/lib/: index.html  utils.ts.html
e2e/: status-modal.spec.ts
playwright-report/: index.html
public/sounds/: ping-jj.m4a
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  providers.rs  session.rs
src/components/: CharacterBubble.tsx  CharacterWidget.tsx  SessionPanel.test.tsx  SessionPanel.tsx  StatusSettingsModal.test.tsx  StatusSettingsModal.tsx
src/components/ui/: dialog.tsx  select.tsx
src/constants/: userStatus.ts
src/hooks/: useAgentSession.ts  useAppConfig.test.tsx  useAppConfig.ts  useCharacterMovement.ts  useUserStatus.test.ts  useUserStatus.ts
src/store/: useStatusSettingsStore.test.ts  useStatusSettingsStore.ts  useUserStatusStore.ts
src/types/: agent.ts  userStatus.ts
test-results/: .last-run.json
